--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -16,8 +16,16 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.13.0'   # use your Flutter version
+          flutter-version: '3.13.0'   # Flutter version that includes Dart 3.7+
           channel: stable
+
+      - name: Verify Flutter & Dart versions
+        run: |
+          flutter --version
+          dart --version
+
+      - name: Flutter clean
+        run: flutter clean
 
       - name: Flutter pub get
         run: flutter pub get
